--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Babylon.js"]
 	path = Babylon.js
 	url = https://github.com/BabylonJS/Babylon.js.git
+[submodule "handjs"]
+	path = handjs
+	url = https://github.com/Deltakosh/handjs
